gitlab/gitlab-main/gitlab/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: rds-git
spec:
  tls:
    - hosts:
        - gitlab.cloudmasa.com
  rules:
    - host: gitlab.cloudmasa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
