gitlab/gitlab-main/gitlab/templates/gitlab-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitlab-network-policy
  namespace: rds-git
spec:
  podSelector:
    matchLabels:
      app: gitlab
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: gitlab
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: gitlab
