gitlab/gitlab-main/gitlab/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backup-reader-policy
  namespace: rds-git
spec:
  podSelector:
    matchLabels:
      app: backup-reader
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}  # allows ingress from any pod in same namespace
  egress:
    - {}  # allows all egress traffic
